# ros2_raisa_logistic

./: .gitignore  0-rosbag.bash  1-run_services.bash  2-run_publishers.bash  3-run_navigations.bash  9-reset_logistic_nav_status.bash  README.md  build.sh  make.sh  run.sh
data_flow_diagram/: readme.md
dual_leg_logs/: data_log_2025-12-12 23:02:50.csv  readme.md
launch/: launch_nav.yaml  launch_publisher.yaml  launch_service.yaml
leg_pozyx_log/: .~lock.zia.csv#  data_log_2025-12-15 00:23:50.csv  data_log_2025-12-16 21:08:59.csv  data_log_2025-12-16 21:12:49.csv  data_log_2025-12-16 21:30:32.csv  data_log_2025-12-17 00:46:36.csv  data_log_2025-12-17 00:51:04.csv  data_log_2025-12-17 00:54:15.csv  data_log_2025-12-17 00:55:20.csv  data_log_2025-12-17 00:56:27.csv  data_log_2025-12-18 08:28:44.csv  data_log_2025-12-19 18:07:37.csv  data_log_2025-12-19 18:12:27.csv  data_log_2025-12-19 18:16:08.csv  data_log_2025-12-19 21:27:28.csv  data_log_2025-12-19 21:38:13.csv  data_log_2025-12-19 21:49:47.csv  data_log_2025-12-19 22:30:47.csv  data_log_2025-12-19 22:34:32.csv  data_log_2025-12-19 22:39:07.csv  data_log_2025-12-19 22:47:06.csv  data_log_2025-12-19 22:53:34.csv  data_log_2025-12-19 22:59:28.csv  data_log_2025-12-19 23:36:12.csv  data_log_2025-12-19 23:44:38.csv  data_log_2025-12-19 23:50:28.csv  edward.csv  fila.csv  rakan.csv  risang.csv  zia.csv
lstm_training_result/: dataset.csv  export_model_old_c.py  preprocess.py  readme.md  scaler_to_cpp.py  train.py
pozyx_logs/: log.csv
reeman_pozyx_logs/: data_log_2025-12-13 21:26:19.csv
rosbag/rosbag2_fila/: metadata.yaml
rosbag/rosbag2_rakan/: metadata.yaml
rosbag/rosbag2_risang/: metadata.yaml  rosbag2_2025_12_20-18_42_56_0.mcap
rosbag/rosbag2_wildan/: metadata.yaml
rosbag/rosbag2_zia/: rosbag2_2025_12_20-17_40_44_0.mcap
rosbag2_fila/: rosbag2_2025_12_20-17_56_20_0.mcap
rosbag2_rakan/: rosbag2_2025_12_20-18_54_40_0.mcap
rosbag2_wildan/: rosbag2_2025_12_20-18_12_39_0.mcap
rosbag2_zia/: metadata.yaml
skeleton_data_logs/: pose_logger_standing_2025_12_17_00_31_21.csv
src/activity_pattern/: package.xml  setup.cfg  setup.py
src/activity_pattern/activity_pattern/: activity_pattern_inference.py
src/activity_pattern/model/: LSTM.keras  feature_scaler.save
src/activity_pattern_recognition/: CMakeLists.txt  package.xml
src/activity_pattern_recognition/include/activity_pattern_recognition/: scaler.h  scaler_utils.h
src/activity_pattern_recognition/src/: activity_pattern_inference_pub.cpp
src/activity_pattern_recognition/src/model/: model_frozen.pb  model_frozen_1.pb
src/camera/: package.xml  setup.py
src/camera/camera/: camera_node.py
src/custom_interface/: CMakeLists.txt  package.xml
src/custom_interface/msg/: ActivityForecast.msg  DualLeg.msg
src/custom_interface/srv/: LogisticNavStatus.srv  PozyxToReeman.srv
src/dual_leg/: package.xml  setup.cfg  setup.py
src/dual_leg/dual_leg/: dual_leg_logger.py  dual_leg_pub.py  dual_leg_sub.py  secret.py
src/dual_leg_pozyx_logger/: package.xml  setup.cfg  setup.py
src/dual_leg_pozyx_logger/dual_leg_pozyx_logger/: leg_pozyx_logger.py
src/interfaces/: CMakeLists.txt  package.xml
src/non_ros_training_callibrate/: dump.py  model.h  train.py
src/pozyx/: package.xml  setup.cfg  setup.py
src/pozyx/pozyx/: uwb_logger.py  uwb_publisher.py
src/pozyx/pypozyx/pypozyx.egg-info/: PKG-INFO
src/pozyx/pypozyx/structures/: generic.py
src/reeman_api_interface/: CMakeLists.txt  package.xml
src/reeman_api_interface/msg/: ReemanSpeed.msg
src/reeman_api_interface/srv/: GetNavStatus.srv  GetPose.srv  GetSpeed.srv  PostMaxSpeed.srv  PostNav.srv  PostNavPoint.srv  PostSpeed.srv
src/reeman_api_service/: CMakeLists.txt  package.xml
src/reeman_api_service/include/reeman_api_service/: secret.hpp
src/reeman_api_service/src/: get_reeman_nav_status_srv.cpp  get_reeman_speed_srv.cpp  httpClient.cpp  post_reeman_cancel_srv.cpp  post_reeman_max_speed_srv.cpp  post_reeman_nav_point_srv.cpp  post_reeman_nav_srv.cpp  post_reeman_speed_srv.cpp  reeman_api_srv.cpp
src/reeman_nav/: CMakeLists.txt  package.xml
src/reeman_nav/src/: logictic_nav_status_pub.cpp  logistic_nav_status_pub.cpp  logistic_nav_status_srv.cpp  reeman_follow.cpp  reeman_human_pose_track.cpp  reeman_nav.cpp
src/reeman_pose/: CMakeLists.txt  package.xml
src/reeman_pose/include/reeman_pose/: httpClient.hpp
src/reeman_pose/src/: httpClient.cpp  pozyx_reeman_pub.cpp  pozyx_reeman_srv.cpp  reeman_pose_pub.cpp
src/reeman_pozyx_logger/: package.xml  setup.cfg  setup.py
src/reeman_pozyx_logger/reeman_pozyx_logger/: reeman_pozyx_logger.py
src/ros2_interface/: CMakeLists.txt  package.xml
src/ros2_interface/action/: MoveDistance.action  NavigateToPointName.action  NavigateToPose.action  TurnAngle.action
src/ros2_interface/msg/: Robot.msg
src/ros2_interface/srv/: ApplyMap.srv  Charge.srv  RelocalizeAbsolute.srv  SetMaxSpeed.srv
src/ros2_utils/: CMakeLists.txt  package.xml
src/ros2_utils/include/ros2_utils/: global_definitions.hpp  help_logger.hpp  simple_fsm.hpp  system_utils.hpp
src/ros2_utils/launch/: all.launch.py
src/ros2_utils/src/: help_logger.cpp
src/test_tensorflow/: package.xml  setup.cfg  setup.py
src/vision/: CMakeLists.txt  package.xml
src/vision/script/: detection.py  face_detection.py  hand_track.py  human_pose.py  pose_data_logger.py
src/vision/src/: capture.cpp
