<?xml version="1.0"?>
<package format="3">
  <name>ros2_interface</name>
  <version>0.0.1</version>
  <description>Common action, service, and message definitions for the system.</description>

  <maintainer email="navisazka26@gmail.com">navis</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- needed for msg/srv/action generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- required to mark this as an interface package -->
  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
